@@ -119,6 +119,13 @@ Fl_Shared_Image* IconLoader::get_icon(const char* name, IconSizes sz, IconContex
 
 	path = get_icon_path(name, sz, ctx);
 	img = Fl_Shared_Image::get(path);
+
+	/* no image, try fallback then */
+	if(!img && fallback_icon) {
+		item = get_icon_path(fallback_icon, sz, ctx);
+		img = Fl_Shared_Image::get(item->path.c_str());
+	}
+
 	return img;
 }
 
@@ -139,7 +146,7 @@ bool IconLoader::set_icon(const char* name, Fl_Widget* widget, IconSizes sz, Ico
 	}
 
 	/* no image, try fallback then */
-	if(!img) {
+	if(!img && fallback_icon) {
 		item = get_or_create_item(items, fallback_icon, sz, ctx, curr_theme, widget);
 		img = Fl_Shared_Image::get(item->path.c_str());
 	}
