@@ -1,3 +1,9 @@
+2009-03-25  Sanel <karijes@users.sourceforge.net>
+
+	* src/IconLoader.cpp: let get() check fallback icon too; some sanity
+	checks
+	* edelib/IconLoader.h: document get() behaviour
+
 2009-03-24  Sanel <karijes@users.sourceforge.net>
 
 	* edelib/IconTheme.h: default_theme_name() added
